apps/app-proxy/overlays/staging-runtime-12-05-demo-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: staging-runtime-12-05-demo-cluster-cap-app-proxy
  namespace: staging-runtime-12-05-demo-cluster
spec:
  ingressClassName: nginx
  rules:
  - host: eti-demo.pipeline-team.cf-cd.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
